--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <!--  Stylesheet CSS -->
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="/assets/CSS/style.css">
   <!--  Bootstrap CSS  -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
@@ -24,10 +24,10 @@
     <div class="collapse navbar-collapse" id="navbar-content">
 
       <nav id="navbar">
-        <ul class="navbar-nav d-flex align-items-center">
+        <ul class="navbar-nav">
           <!-- LOGO Part Start -->
           <li data-tabtitle="0" class="nav-item active">
-            <a href="#home" data-tabtitle="0"
+            <a href=".home" data-tabtitle="0"
               class="navbar-brand d-flex align-items-center text-decoration-none text-primary " aria-current="page">
 
               <svg width="57" height="56" viewBox="0 0 57 56" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -294,19 +294,19 @@
           </li>
           <!-- LOGO Part End -->
           <li data-tabtitle="1" class="nav-item">
-            <a href="#presentations" class="nav-link text-info">Présentations</a>
+            <a href=".presentations" class="nav-link text-info">Présentations</a>
           </li>
           <li data-tabtitle="2" class="nav-item">
-            <a href="#definitions" class="nav-link text-info">Définitions</a>
+            <a href=".definitions" class="nav-link text-info">Définitions</a>
           </li>
           <li data-tabtitle="3" class="nav-item">
-            <a href="#testimonials" class="nav-link text-info">Témoignages</a>
+            <a href=".testimonials" class="nav-link text-info">Témoignages</a>
           </li>
           <li data-tabtitle="4" class="nav-item">
-            <a href="#forum" class="nav-link text-info">Forum</a>
+            <a href=".forum" class="nav-link text-info">Forum</a>
           </li>
           <li data-tabtitle="5" class="nav-item">
-            <a href="#contact" class="nav-link text-info">Qui Contacter?</a>
+            <a href=".contact" class="nav-link text-info">Qui Contacter?</a>
           </li>
         </ul>
       </nav>
@@ -319,7 +319,7 @@
   </header>
   <!-- TODO main part -->
   <main class="container">
-    <section id="tab0" class="row active">
+    <section id="tab0" class="row active home">
       SECTION home
       <figure class="figure">
         <img src="#" alt="" class="img-fluid figure-img">
@@ -356,7 +356,7 @@
       maxime doloribus, quibusdam quo minima cum fuga! Dolore, aliquid officia. Vero, rerum ab.
     </section>
     <!--End of Row Section-->
-    <section id="tab1" class="row">
+    <section id="tab1" class="row presentations">
       <div class="row">
         <h1>La Dépression Post Partum</h1>
         <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Aperiam facilis saepe adipisci ipsam possimus
@@ -444,7 +444,7 @@
       <!--End of Row Article-->
     </section>
     <!--End of Row Section-->
-    <section id="tab2" class="row">
+    <section id="tab2" class="row definitions">
       <h2>SECTION definitions</h2>
       <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sed veritatis odit quos atque dolor iste quas ratione
         consectetur. Ea maxime ipsum error cupiditate. Sed, ratione corporis! Enim sed asperiores officiis similique
@@ -462,7 +462,7 @@
         qui, voluptates optio facilis dicta magnam neque iste id!</p>
     </section>
     <!--End of Row Section-->
-    <section id="tab3" class="row">
+    <section id="tab3" class="row testimonials">
       <h2>SECTION testimonials</h2>
       <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sed veritatis odit quos atque dolor iste quas ratione
         consectetur. Ea maxime ipsum error cupiditate. Sed, ratione corporis! Enim sed asperiores officiis similique
@@ -480,7 +480,7 @@
         qui, voluptates optio facilis dicta magnam neque iste id!</p>
     </section>
     <!--End of Row Section-->
-    <section id="tab4" class="row">
+    <section id="tab4" class="row forum">
       <h2>SECTION forum</h2>
       <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sed veritatis odit quos atque dolor iste quas ratione
         consectetur. Ea maxime ipsum error cupiditate. Sed, ratione corporis! Enim sed asperiores officiis similique
@@ -498,7 +498,7 @@
         qui, voluptates optio facilis dicta magnam neque iste id!</p>
     </section>
     <!--End of Row Section-->
-    <section id="tab5" class="row">
+    <section id="tab5" class="row contact">
       <h2>SECTION contact</h2>
       <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sed veritatis odit quos atque dolor iste quas ratione
         consectetur. Ea maxime ipsum error cupiditate. Sed, ratione corporis! Enim sed asperiores officiis similique
@@ -537,7 +537,7 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.min.js"
     integrity="sha384-Atwg2Pkwv9vp0ygtn1JAojH0nYbwNJLPhwyoVbhoPwBhjQPR5VtM2+xf0Uwh9KtT"
     crossorigin="anonymous"></script>
-  <script src="/scriptDPP-Basic.js"></script>
+  <script src="/assets/JS/scriptDPP-Basic.js"></script>
 </body>
 
 </html>
