Change header color

--- a/index.html
+++ b/index.html
@@ -24,11 +24,13 @@
     <div class="collapse navbar-collapse" id="navbar-content">
 
       <nav id="navbar">
-        <ul class="navbar-nav">
+        <ul class="navbar-nav d-flex align-items-center ">
+
           <!-- LOGO Part Start -->
-          <li data-tabtitle="0" class="nav-item active">
-            <a href=".home" data-tabtitle="0"
-              class="navbar-brand d-flex align-items-center text-decoration-none text-primary " aria-current="page">
+          <li data-tabtitle="0" class="nav-item active d-flex justify-content-between">
+            <a href="#home" data-tabtitle="0"
+              class="navbar-brand d-flex align-items-center text-decoration-none text-primary justify-content-between "
+              aria-current="page">
 
               <svg width="57" height="56" viewBox="0 0 57 56" fill="none" xmlns="http://www.w3.org/2000/svg">
                 <g id="DPP-Logo">
@@ -288,26 +290,28 @@
                   </clipPath>
                 </defs>
               </svg>
-              <span class="fs-4">Dépression Post Partum</span>
+              <span class="fs-4 logo-title">Dépression Post Partum</span>
 
             </a>
           </li>
           <!-- LOGO Part End -->
+
           <li data-tabtitle="1" class="nav-item">
-            <a href=".presentations" class="nav-link text-info">Présentations</a>
+            <a href="#presentations" class="nav-link">Présentations</a>
           </li>
           <li data-tabtitle="2" class="nav-item">
-            <a href=".definitions" class="nav-link text-info">Définitions</a>
+            <a href="#definitions" class="nav-link">Définitions</a>
           </li>
           <li data-tabtitle="3" class="nav-item">
-            <a href=".testimonials" class="nav-link text-info">Témoignages</a>
+            <a href="#testimonials" class="nav-link">Témoignages</a>
           </li>
           <li data-tabtitle="4" class="nav-item">
-            <a href=".forum" class="nav-link text-info">Forum</a>
+            <a href="#forum" class="nav-link">Forum</a>
           </li>
           <li data-tabtitle="5" class="nav-item">
-            <a href=".contact" class="nav-link text-info">Qui Contacter?</a>
+            <a href="#contact" class="nav-link">Qui Contacter?</a>
           </li>
+
         </ul>
       </nav>
     </div>
