Add Slideshow JS directory

--- a/index.html
+++ b/index.html
@@ -324,9 +324,8 @@
   <!-- TODO main part -->
   <main class="container">
     <section id="tab0" class="row active home">
-      SECTION home
       <figure class="figure">
-        <img src="#" alt="" class="img-fluid figure-img">
+        <img src="/assets/media/page de garde/1.jpg" alt="bébé pleure" class="img-fluid figure-img">
         <figcaption class="figure-caption text-right">Légende img</figcaption>
       </figure>
       <!-- figure et figure-img (s/img):espace apr img  -->
@@ -334,30 +333,13 @@
       <!-- img-thumbnail:bordure arrondie à l'img -->
       <!-- rounded:coin arrondi -->
       <!-- width="200" -->
-      <blockquote class="blockquote">
+      <!-- <blockquote class="blockquote">
         <p></p>
         <footer class="bloquote-footer">
           NOM
           <cite>SRC quote</cite>
         </footer>
-      </blockquote>
-      Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sapiente dolor voluptatem eveniet quia atque placeat!
-      Doloremque itaque ullam beatae? Eaque esse cum sapiente sit architecto similique odio voluptatum praesentium
-      officia fugit. Sapiente pariatur placeat quaerat? Vitae nisi exercitationem quisquam modi facilis harum similique
-      eligendi? Error ut aliquid totam voluptate neque nisi illum, itaque quos perspiciatis nobis facere officia harum
-      dolores dicta obcaecati, dolor repellendus qui animi perferendis delectus reprehenderit quidem nam impedit.
-      Laborum deserunt sit optio debitis, maxime nulla amet culpa quam asperiores quasi fugiat reprehenderit reiciendis
-      commodi cumque dolore, ipsum explicabo, odio tempore perspiciatis. Excepturi dolore sunt ut ipsam corrupti
-      accusamus esse architecto, similique dolor quasi, voluptates rerum eveniet earum tempore? Unde quos cum libero
-      perspiciatis quidem, corrupti dignissimos ipsum omnis asperiores officiis nobis accusamus quaerat, nam harum?
-      Dolor, magnam qui laborum rem quae aliquid voluptatem ex repudiandae officia placeat provident voluptates
-      consequatur est facere beatae cum? Corrupti porro a voluptatem harum ipsam eaque aperiam quia ex? Esse quasi
-      doloribus saepe omnis illo maiores repudiandae nam ut corporis est voluptatibus, perferendis cum minus illum quo!
-      Asperiores natus, dolorum ipsam aliquid beatae labore, molestias placeat iste soluta provident, doloremque hic
-      quos tenetur magni qui atque eveniet nesciunt. Minima facilis amet voluptatum quia officia labore obcaecati non
-      reprehenderit ullam quae voluptas, dolor alias atque. In minus harum, iste doloribus hic atque maxime velit
-      dolores expedita, impedit ab et debitis sunt. Quisquam aspernatur sed consequatur molestiae delectus iste incidunt
-      maxime doloribus, quibusdam quo minima cum fuga! Dolore, aliquid officia. Vero, rerum ab.
+      </blockquote> -->
     </section>
     <!--End of Row Section-->
     <section id="tab1" class="row presentations">
@@ -541,6 +523,7 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.min.js"
     integrity="sha384-Atwg2Pkwv9vp0ygtn1JAojH0nYbwNJLPhwyoVbhoPwBhjQPR5VtM2+xf0Uwh9KtT"
     crossorigin="anonymous"></script>
+  <script src="/assets/JS/slideshow.js"></script>
   <script src="/assets/JS/scriptDPP-Basic.js"></script>
 </body>
 
