--- a/index.html
+++ b/index.html
@@ -290,7 +290,7 @@
                   </clipPath>
                 </defs>
               </svg>
-              <span class="fs-4 logo-title">Dépression Post Partum</span>
+              <span class="fs-4 logo-title"><strong>Dépression Post Partum</strong></span>
 
             </a>
           </li>
@@ -324,6 +324,33 @@
   <!-- TODO main part -->
   <main class="container">
     <section id="tab0" class="row active home">
+      <svg id="Layer_1" height="57" viewBox="0 0 512 512" width="56" xmlns="http://www.w3.org/2000/svg"
+        data-name="Layer 1">
+        <path
+          d="m453.081 160.682q-.7-1.173-1.41-2.31c-21.816-34.865-64.054-52.653-105.111-44.267-9.405 1.921-23.39 5.842-36.606 13.613-13.349 7.847-22.694 17.719-27.778 29.34-8.427 19.264-4.723 42.2 11.009 68.177 21.4 35.344 16.25 71.706 11.7 103.787-2.754 19.422-5.132 36.195-1.47 50.486 4.2 16.38 16.18 26.957 36.636 32.336a43.549 43.549 0 0 0 11.11 1.446c19.409 0 39.384-13.022 58.39-38.253 43.025-57.115 71.561-167.246 43.53-214.355z" />
+        <path
+          d="m303.625 110.871a28.479 28.479 0 0 0 5.261-.49c9.256-1.738 17.052-7.8 21.951-17.068 4.7-8.889 6.166-19.743 4.132-30.561-4.279-22.758-22.943-38.418-41.6-34.917-9.255 1.738-17.051 7.8-21.95 17.068-4.7 8.889-6.167 19.743-4.132 30.561 3.873 20.614 19.55 35.407 36.338 35.407z" />
+        <path
+          d="m367.854 99.79q.885.064 1.762.064c14.9 0 27.73-13.7 29.017-31.436a36.712 36.712 0 0 0 -6.29-23.855c-4.9-6.935-11.878-11.065-19.64-11.627-15.632-1.139-29.442 12.941-30.779 31.372a36.72 36.72 0 0 0 6.289 23.854c4.904 6.938 11.879 11.065 19.641 11.628z" />
+        <path
+          d="m422.933 104.713q.657.048 1.308.047c10.92 0 20.317-9.921 21.249-22.773a26.458 26.458 0 0 0 -4.548-17.187 19.386 19.386 0 0 0 -14.494-8.548c-11.463-.828-21.589 9.363-22.558 22.725a26.459 26.459 0 0 0 4.548 17.193 19.39 19.39 0 0 0 14.495 8.543z" />
+        <path
+          d="m442.688 119.261a17.259 17.259 0 0 0 10.485 10.708 16.131 16.131 0 0 0 5.343.9c8.074 0 16.041-5.914 19.239-15.059a23.315 23.315 0 0 0 .079-15.673 17.263 17.263 0 0 0 -10.485-10.709c-9.647-3.37-20.673 2.981-24.583 14.156a23.315 23.315 0 0 0 -.078 15.677z" />
+        <path
+          d="m494.967 130.989c-7.84-6.55-20.4-4.492-28 4.589a23.326 23.326 0 0 0 -5.6 14.638 17.254 17.254 0 0 0 6.038 13.717 16.8 16.8 0 0 0 10.9 3.83 22.68 22.68 0 0 0 17.1-8.419 23.32 23.32 0 0 0 5.6-14.64 17.25 17.25 0 0 0 -6.038-13.715z" />
+        <path
+          d="m151.285 205.842c-41.751 3.59-77.211 32.619-88.238 72.234q-.36 1.293-.7 2.617c-13.018 51.17 34.208 135.912 85.131 177.5 21.408 17.481 42.21 26.467 60.542 26.466a49.559 49.559 0 0 0 21.8-4.862c19.328-9.345 28.719-21.062 29.555-36.872.728-13.735-5.144-28.619-11.943-45.853-11.155-28.273-23.8-60.32-13.429-99.782 7.714-29.363 4.759-52.408-8.785-68.493-8.172-9.705-19.935-16.524-34.963-20.268-14.882-3.713-29.406-3.511-38.97-2.687zm-69.399 107.458q-.312-1.818-.569-3.616a5 5 0 1 1 9.9-1.414q.237 1.659.526 3.338a5 5 0 1 1 -9.856 1.692zm37.22 76.633a5 5 0 0 1 -6.876-1.65c-11.592-18.91-20.584-38.508-26-56.673a5 5 0 0 1 9.583-2.859c5.175 17.347 13.8 36.125 24.946 54.306a5 5 0 0 1 -1.653 6.877z" />
+        <path
+          d="m183.456 191.743a28.526 28.526 0 0 0 2.9-.147c9.368-.956 17.645-6.343 23.305-15.167 5.428-8.463 7.8-19.156 6.683-30.107-2.354-23.035-19.627-40.213-38.525-38.282-9.369.956-17.646 6.342-23.306 15.167-5.428 8.464-7.8 19.156-6.683 30.107 2.229 21.853 17.896 38.43 35.626 38.429z" />
+        <path
+          d="m118.175 199.708a24.418 24.418 0 0 0 8.624-1.56c7.284-2.739 12.8-8.675 15.536-16.717a36.707 36.707 0 0 0 -.738-24.657c-6.512-17.295-23.744-26.878-38.415-21.362-7.284 2.738-12.8 8.675-15.536 16.716a36.709 36.709 0 0 0 .737 24.658c5.265 13.981 17.534 22.922 29.792 22.922z" />
+        <path
+          d="m68.984 219.633a18.111 18.111 0 0 0 6.394-1.157 19.38 19.38 0 0 0 11.475-12.305 26.461 26.461 0 0 0 -.517-17.777c-4.72-12.538-17.317-19.448-28.078-15.4a19.383 19.383 0 0 0 -11.476 12.306 26.464 26.464 0 0 0 .517 17.776c3.806 10.109 12.73 16.557 21.685 16.557z" />
+        <path
+          d="m43.756 254.343a16.6 16.6 0 0 0 9.789-3.079 17.254 17.254 0 0 0 7.018-13.242 23.324 23.324 0 0 0 -4.522-15.007c-6.919-9.607-19.3-12.57-27.589-6.608a17.256 17.256 0 0 0 -7.018 13.242 23.316 23.316 0 0 0 4.523 15.007c4.5 6.249 11.307 9.688 17.799 9.687z" />
+        <path
+          d="m21.384 291.4a23.652 23.652 0 0 0 13.03 4.043c6.125 0 11.812-2.607 15.118-7.576a17.246 17.246 0 0 0 1.899-14.867 23.33 23.33 0 0 0 -9.524-12.45c-9.863-6.554-22.49-4.969-28.149 3.533a17.254 17.254 0 0 0 -1.9 14.866 23.33 23.33 0 0 0 9.524 12.45z" />
+      </svg>
       <figure class="figure">
         <img src="/assets/media/page de garde/1.jpg" alt="bébé pleure" class="img-fluid figure-img">
         <figcaption class="figure-caption text-right">Légende img</figcaption>
@@ -344,70 +371,85 @@
     <!--End of Row Section-->
     <section id="tab1" class="row presentations">
       <div class="row">
-        <h1>La Dépression Post Partum</h1>
+        <h1><strong>La Dépression Post Partum</strong></h1>
         <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Aperiam facilis saepe adipisci ipsam possimus
           voluptate laudantium ullam aspernatur voluptates nemo.</p>
       </div>
       <!-- End of Row Intro -->
       <div class="row">
-        <article id="man-pres-left" class="col-5 bg-primary p-3">
-          <p> <strong>STRONG</strong><em>EM balise</em> Lorem ipsum dolor sit amet consectetur, adipisicing elit. Odit
-            cum molestias amet sit commodi optio et
-            reiciendis exercitationem non, inventore impedit nobis ratione temporibus harum dolorum est ut! Itaque,
-            voluptas non rem iste officiis blanditiis repudiandae atque ad quas dolores iure inventore? Sit accusantium
-            tempora ex labore explicabo eligendi illum debitis aut repudiandae fugit culpa odio inventore veritatis,
-            voluptatibus, totam, mollitia rem rerum natus exercitationem repellat esse quis? Necessitatibus nihil vero
-            totam sit adipisci tempora consequuntur provident quam excepturi natus eligendi nostrum qui corrupti
-            deleniti
-            deserunt eum reprehenderit sed est aut repellendus, consectetur id dolore voluptatum. Quisquam quas
-            necessitatibus corporis itaque nam. Autem, veniam facilis cumque quod placeat dolore quibusdam tempora amet,
-            repudiandae vero corporis omnis ex sapiente nam praesentium a quas architecto molestias laboriosam sunt
-            officia? Repellendus nemo vitae eaque ut enim corrupti. Minima error voluptatum, quia vitae expedita libero
-            recusandae similique voluptate! Nemo, architecto. Dolorum voluptates consequatur, aliquam rerum iusto, animi
-            esse ut rem similique nisi numquam possimus? Vero voluptate fugit eos. Ad quam veniam et odit molestiae?
-            Saepe, dicta! Sed ullam vero nostrum consequatur necessitatibus repellat. Incidunt, consectetur omnis
-            nostrum
-            adipisci porro facere quasi enim illo, sequi alias aspernatur quo pariatur! Commodi laboriosam illum
-            aspernatur doloribus aliquam fuga quaerat corrupti! Excepturi distinctio, fuga perferendis quos, labore
-            voluptatibus voluptatem deleniti voluptas eligendi animi obcaecati fugiat nobis porro aliquid. Eaque, sunt
-            ipsam! Necessitatibus quo sed quaerat voluptates quidem ducimus placeat nulla facilis praesentium
-            consequuntur
-            eius facere eaque adipisci provident vel neque voluptatibus alias odio repellendus, ab itaque. Corrupti
-            error
-            nisi consequatur, quae tempore recusandae minus ut, beatae officiis facere vitae praesentium numquam
-            accusantium a sed ipsum. Quidem natus ipsam explicabo inventore est architecto illo. Eos magnam iusto
-            perspiciatis officiis impedit dolorum, voluptate debitis quod quidem mollitia laborum sequi quas? Magni aut
-            corrupti exercitationem quae quas? Commodi tempora fugiat debitis laudantium sint similique impedit dolores
-            molestias soluta, neque totam, quis repudiandae magni ad unde magnam! Deserunt, perspiciatis. Eligendi
-            necessitatibus at, aut quaerat eum hic est provident eos quasi quia? Sit voluptatum nihil officiis earum
-            voluptates eius tenetur hic corrupti veritatis commodi ratione debitis impedit obcaecati veniam, dignissimos
-            est! Error est sint, reprehenderit quidem fugiat consequuntur asperiores iste a accusamus ducimus. In magnam
-            earum rem iure incidunt possimus, ipsum natus facere quo quae, similique iusto, perspiciatis tenetur quos
-            deserunt vero amet voluptates? Ad nisi aspernatur explicabo nulla quae iure earum consequatur, eum nostrum
-            aperiam unde officiis. Nemo ullam deserunt consequatur saepe, commodi deleniti hic animi voluptas nostrum
-            nesciunt, maiores similique et quam. Totam odio numquam ab perspiciatis laborum cum alias a quos assumenda
-            dolorem. Mollitia veniam impedit recusandae temporibus praesentium numquam eos dolorum. Ex unde est eaque
-            vitae dolore dolores incidunt sed earum asperiores odio ratione iusto praesentium, optio vel exercitationem.
-            Veniam architecto eos, hic labore rerum odio quia quaerat suscipit officiis deserunt provident
-            exercitationem!
-            Eaque quos pariatur accusamus sunt cupiditate magni dolor incidunt eos rerum delectus ullam quisquam maxime,
-            dolores mollitia maiores, illo totam ad aspernatur culpa asperiores omnis quia. Animi, enim. Numquam
-            asperiores sed ab eligendi inventore voluptatibus, enim excepturi aspernatur velit accusantium reiciendis
-            ratione impedit, a doloribus veritatis recusandae, magnam quidem nemo quae delectus soluta expedita! Eius
-            asperiores aperiam amet fuga repellendus nam nemo porro nesciunt eveniet quaerat quo accusantium, iure
-            doloremque ea saepe repellat quos delectus repudiandae voluptates dicta autem perferendis voluptatem ipsum.
-            Vel, ullam possimus voluptatibus eius blanditiis magnam, id quibusdam eos similique sint beatae? Nisi
-            voluptas
-            odit laboriosam vero voluptate saepe nam sint maxime provident deleniti impedit architecto magni placeat
-            dolorem, tempora inventore blanditiis! Debitis sunt asperiores corporis enim fuga consequuntur obcaecati
-            voluptates quae laudantium inventore autem reiciendis consectetur dolore facilis vitae amet, iure cupiditate
-            dolorem dolor architecto? Itaque qui alias similique dolorem est voluptatem unde. Sed velit modi obcaecati
-            repellendus accusantium suscipit consectetur labore blanditiis iure excepturi unde dolorem earum mollitia
-            saepe animi, voluptate quae veritatis quaerat, dolores necessitatibus provident dolor odio nemo? Magni
-            assumenda eveniet itaque quam beatae, consequatur odit quis sequi debitis?</p>
+        <article id="man-pres-left" class="col-6  p-3">
+          <p>
+            Je suis à fond dans mon rêve qui mélange action comme dans <em>Die Hard</em> et amour comme <em>Titanic</em>
+            sans le bain en eaux froides.
+            Une main viens me secouer, je pense que cela fait toujours parti de mon rêve mais je m'apperçois qu'il n'en
+            est rien car la voix se fait de plus en plus persistante, elle se fait plus audible <span
+              class="online">"..."chérie!,<span class="cherie">...chérie!!!</span></span>".
+            J'ouvre les yeux, c'est mon amour qui me regarde, les sanglots dans la voix.
+            Je réalise qu'il se passe quelquechose de pas normal, je bondi du lit (ou presque) de plus en plus paniqué
+            me disant dans ma tête <span class="offline">"...il y a un problème!!"</span>Je rejoins entre temps ma
+            dulciné dans le salon pour avoir le pourquoi de cet état.Elle me tombe dans les bras en sanglots, il est 6h
+            du matin, j'essaye de la calmer pour qu'elle m'explique ce qui se passe.
+            Sous ses airs toute penaude et entre les reniflement des sanglots, elle me tends un morceau de plastique, je
+            le scrute <span class="offline">"Q'uest ce que c'est que cela?"</span>C'est à ce moment que je réalise que
+            j'ai un test de grossesse dans les mains, c'est à mon tour de me retrouver tout penaud.
+            Je la regarde dans les yeux, le test encore en main et dit : <span class="online">"...sérieux??C'est
+              sur??"</span>Elle me regarde tendrement et me répond: <span class="online">"Oui"</span>, je commence à
+            sourire ne sachant pas quoi dire, mais dans ma tête c'est le 14 Juillet lors de ses feux d'artifices en
+            plein moi de Janvier.
+          </p>
+          <p>
+            L'histoire commence avec toutes les questions qui s'en suivent : <span class="offline">"Je vais être
+              papa!!C'est un garçon, une fille?Il faut quoi qd on attend un enfant?9 mois! <span
+                class="offline_ca">ça</span> fait Janvier,Février,...,Octobre?Comment on va faire?</span>...et bien
+            d'autres d'on je ne me souviens plus.
+            Devant elle le sourire d'un joyeux benêt, <span class="online">"T'inquiète pas ma chérie!Tout va bien se
+              passer!Tu es sur?On va acheter d'autres test?On peut savoir le sexe quand?"</span>
+          </p>
+          <p>
+            Les nouvelles dispositions dans notre vie arrivent : <span class="offline">"Il faut que j'arrête l'alcool,ou
+              vais je trouver la tune?Combien ça coute?"</span>
+            Les conditions de la grossesse et nos âges fonts que l'on souhaitent des certitudes, rendez vous chez la
+            gynéco, échographie le plutôt possible, pour être sur de sa <span class="bold_text">viabilité</span>.
+            Les premières réponses arrivent mais avant cela il faut cocher la case prise de sang pour que taux <span
+              class="bold_text">HCG</span> devienne comme un sésame et par la même occasion un bilan complet pour
+            madame, pour éviter les <span class="underline_text">"surprises"</span>, mais je reviendrai en détail sur ce
+            mot.
+            Après quelques déboires repoussant les résultats à 2 semaines plus tard, ça y est c'est sur de chez sur!
+            J'apprend tout crédule, tous ce qui concerne les risques avant les 3 premières mois de grossesse et aussi
+            les 6 puis les 9 mois, grossesses à risques, les risques pour les prématurés (même si je suis moi même un
+            survivant des "premiers" préma aux antilles,...) fausses couches et notamment les superstitions des annonces
+            de la grossesse à l'entourage, et encore bien d'autres..."premières surprises".
+          </p>
+          <p>
+            Le temps est venu pour les premiers shopping pour bébé (ou plutôt le choix entre du neuf et de l'occasion,
+            car en rentrant dans les magasins aux antilles , le choix est vite fait! <span class="online">"On prendra la
+              majorité d'occasion sinon on risque de l'accueillir à la Robinson Crusoé"</span>).
+            Mais au final toutes ses appréhensions s'estompent lors de l'échographie des 3 mois est arrivé, on entend
+            son coeur battre et pourtant on a qu'une cacahuète à l'image, madame à les larmes aux yeux, moi je souris
+            comme un ahuri en essayant de déterminer si il ou elle me ressemble mais c'est peine perdue.
+            <span class="online">"Chérie!Tu entends?"(sourire aux lèvres).
+              "Bien sûr mon coeur!"</span>exit les remarques à 2 balles <span class="offline">"Il faudrait être
+              sourd!"</span>
+            On sort de cette echo avec le sourire aux lèvres comme dans une publicitée pour chewing gum proné par les
+            dentistes.
+          </p>
+          <p>
+            Le moment d'annoncer à tous est arrivée, cool, les plus proches sont déjà au courant malgré la superstition
+            du <span class="online">"...pas avant 3 mois"</span> et surtout on va pouvoir affiner un peu plus cette
+            liste de naissance.
+            Madame commence à appréhender et les phrases commencant par <span class="online">"est ce que...?" </span>ce
+            font de plus en plus présentent.
+            En bon concubin les <span class="online">"<span class="offline_ca">ça</span> va aller","T'inquiète
+              pas.."</span>sortent aussi plus fréquemment mais à l'intérieur <span class="offline">"Elle n'a pas
+              tort","Elle ne soulève que le négatif ou quoi?","Effectivement, est ce que...?</span>Allé on fait son
+            "bonhomme", au plus profond de l'éthymologie du mot.
+          </p>
+          <p>
+            Deuxième surprise bis
+          </p>
         </article>
         <!--End of Col-5 Article Left-->
-        <article id="woman-pres-right" class="col-4 offset-3 bg-info p-3">
+        <article id="woman-pres-right" class="col-4 offset-2  p-3">
           <p>
             <strong>STRONG</strong>
             <em>EM balise</em>
