Modify chéri word

--- a/index.html
+++ b/index.html
@@ -383,7 +383,7 @@
             sans le bain en eaux froides.
             Une main viens me secouer, je pense que cela fait toujours parti de mon rêve mais je m'apperçois qu'il n'en
             est rien car la voix se fait de plus en plus persistante, elle se fait plus audible <span
-              class="online">"..."chérie!,<span class="cherie">...chérie!!!</span></span>".
+              class="online">"..."chéri!,<span class="cherie">...chéri!!!</span></span>".
             J'ouvre les yeux, c'est mon amour qui me regarde, les sanglots dans la voix.
             Je réalise qu'il se passe quelquechose de pas normal, je bondi du lit (ou presque) de plus en plus paniqué
             me disant dans ma tête <span class="offline">"...il y a un problème!!"</span>Je rejoins entre temps ma
