Add man text in presentation section

--- a/index.html
+++ b/index.html
@@ -445,7 +445,20 @@
             "bonhomme", au plus profond de l'éthymologie du mot.
           </p>
           <p>
-            Deuxième surprise bis
+            Deuxième surprise bis, <span class="bold_text">Ze confinement!</span><span class="offline">"C'est quoi
+              encore
+              se truc??"</span>
+            Les magasins bébé se ferment, les visites médicales ne peuvent plus se faire accompagné, l'activité
+            professionnelle s'arrête, <span class="online">génial de nouvelles questions!!!Est ce que je pourrais
+              assister aux prochaines échographies?Quand?</span>Et la plus importante : <span class="online">Est ce que
+              je pourrais assister à l'accouchement?Comment cela va se passer?</span>
+          </p>
+          <p>Si cette surprise m'a perturbé, ce n'est rien par rapport à l'anxiété que commence à ressentir ma chérie.
+            Je dois mettre mes appréhensions de côtés sinon ça na va pas le faire.
+            Les mois passent, l'échéance arrive de plus en plus, les réponses aux questions se font un peu moins
+            présentent, soit paarce que les réponses sont apparues, soit parce que les semblant de réponses nous pousse
+            à nous dire que les choses s'arrangent plus ou moins.
+            Cependant
           </p>
         </article>
         <!--End of Col-5 Article Left-->
