--- a/index.html
+++ b/index.html
@@ -361,6 +361,7 @@
                 d="m21.384 291.4a23.652 23.652 0 0 0 13.03 4.043c6.125 0 11.812-2.607 15.118-7.576a17.246 17.246 0 0 0 1.899-14.867 23.33 23.33 0 0 0 -9.524-12.45c-9.863-6.554-22.49-4.969-28.149 3.533a17.254 17.254 0 0 0 -1.9 14.866 23.33 23.33 0 0 0 9.524 12.45z" />
             </g>
           </svg>
+          <button class="btn" onclick="slideImage()">next</button>
         </div>
         <div class="foot2">
           <svg width="56" height="57" viewBox="0 0 56 57" fill="none" xmlns="http://www.w3.org/2000/svg">
